Fixing up swagger docs
